--- a/styles/style.css
+++ b/styles/style.css
@@ -58,15 +58,20 @@ a {
   margin-top: 25px;
 }
 .login-form__input {
-  padding: 0 0 10px 10px;
-  border-bottom: 2px solid lightgrey;
+  padding: 0 0 15px 15px;
+  border-bottom: 1px solid lightgrey;
   width: 250px;
+  max-height: 100%;
 }
 .login-form__input:focus {
   border-color: red;
+  border-width: 2px;
+  height: 32px;
 }
 .login-form__input:valid {
   border-color: limegreen;
+  border-width: 2px;
+  height: 32px;
 }
 .login-form__input:valid + .login-form__label {
   opacity: 0;
@@ -78,7 +83,7 @@ a {
 .login-form__label {
   position: absolute;
   top: 0;
-  left: 10px;
+  left: 15px;
   color: gray;
 }
 .login-form__password-control {
@@ -100,7 +105,7 @@ a {
   font-weight: bold;
   background-color: #3f83b0;
   border-radius: 3px;
-  height: 30px;
+  height: 35px;
   letter-spacing: 1px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.7);
 }
