--- a/styles/style.css
+++ b/styles/style.css
@@ -88,7 +88,7 @@ a {
 .login-form__password-control {
   position: absolute;
   right: 10px;
-  display: inline-block;
+  top: 0;
   width: 20px;
   height: 20px;
   background: url("../images/no-view.svg") 0 0 no-repeat;
