--- a/styles/style.css
+++ b/styles/style.css
@@ -285,13 +285,24 @@ a {
 }
 .auto-list__item {
   position: relative;
-  padding: 10px 50px 10px 0;
+  padding-right: 50px;
   border-bottom: 1px solid lightgray;
 }
 .auto-address {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+}
+.auto-list__item-container {
+  padding: 10px 0;
+}
+.auto-list__item-container:active {
+  background: linear-gradient(top, hsl(218, 43%, 71%), hsl(203, 42%, 57%) 90%);
+  background: -webkit-linear-gradient(
+    top,
+    hsla(204, 47%, 47%, 0.11),
+    hsl(0, 0%, 100%) 90%
+  );
 }
 
 /*Report page*/
@@ -358,4 +369,69 @@ a {
 }
 .report-list__item-distance {
   border-left: 1px solid #d0caca;
+}
+
+/*Tracking page*/
+.tracking-page {
+  height: 100vh;
+}
+.tracking-map {
+  background: black;
+  height: 50%;
+  width: 100%;
+}
+.tracking-menu {
+  display: grid;
+  grid-template-areas: ". . .";
+  text-align: center;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.7);
+}
+.tracking-menu__item {
+  border-bottom: 2px solid transparent;
+  padding: 15px 0;
+  width: 100%;
+  cursor: pointer;
+}
+.tracking-menu__item-container {
+  position: relative;
+  display: inline-block;
+}
+#trackingInfo .tracking-menu__icon,
+#trackingHistory .tracking-menu__icon,
+#trackingTasks .tracking-menu__icon {
+  position: absolute;
+  left: -25px;
+  width: 20px;
+  height: 20px;
+  background: url("../images/app icons/car.svg") 0 0 no-repeat;
+}
+#trackingTasks .tracking-menu__icon {
+  background: url("../images/app icons/list.svg") 0 0 no-repeat;
+}
+#trackingHistory .tracking-menu__icon {
+  background: url("../images/app icons/clock.svg") 0 0 no-repeat;
+}
+.active {
+  color: #3f83b0;
+  border-color: #3f83b0;
+}
+.tracking-sections {
+  overflow: auto;
+  height: 50%;
+}
+.tracking-info_auto {
+  padding: 10px;
+}
+.tracking-info_list-item {
+  padding: 10px 0;
+  border-top: 1px solid lightgray;
+  display: grid;
+  grid-template-areas: ". .";
+  justify-content: space-between;
+}
+.tracking-info_list-item p{
+  padding: 0 10px;
+}
+.tracking-item__value {
+  color: #3f83b0;
 }
